<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayActivity"
    android:orientation="vertical"
    android:background="@drawable/home">

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/medicalButton"
                style="@android:style/ButtonBar"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/selectors"
                android:fontFamily="monospace"
                android:text="@string/medical"
                android:textSize="20sp" />

            <Button
                android:id="@+id/preparationButton"
                style="@android:style/ButtonBar"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/select"
                android:fontFamily="monospace"
                android:text="@string/preparation"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

            <Button
                android:id="@+id/shoppingButton"
                style="@android:style/ButtonBar"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/select"
                android:textColor="@color/white"
                android:fontFamily="monospace"
                android:text="@string/shopping"
                android:textSize="20sp" />

            <Button
                android:id="@+id/smsButton"
                style="@android:style/ButtonBar"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selectors"
                android:fontFamily="monospace"
                android:text="@string/sms"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/dueButton"
                style="@android:style/ButtonBar"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selectors"
                android:fontFamily="monospace"
                android:text="@string/date"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
